# gmsk-transfer

./: .gitignore  Makefile.am  README  configure.ac  gmsk-transfer.c  gmsk.c  guix.scm  manifest.scm  test.sh
examples/: Makefile.am  duplex.c  echo-server.c  full-duplex.c  half-duplex.sh
po/: POTFILES.in  fr.po  gmsk-transfer.pot
src/: Makefile.am  gmsk-transfer.c  gmsk-transfer.h  gmskframesync.c  gmskframesync.h  main.c
tests/: Makefile.am  test-library-callback.c  test-library-file.c  test-library.c  test-program.sh
